1998-08-25  Andrew Veliath  <andrewtv@usa.net>

	* Update libIDL version to 0.4.0.
	
	* Update font lock keywords in README, added support for
	  __declspec.
	
	* Implementation of IDL_tree_free for IDLN_GENTREE hashes in
	  place.

	* Makefile.am: Change libtool version to 3:2:3.
	
	* parser.y, IDL.h: Changes for global ref counting.
	
	* util.c (IDL_tree_free): Instead of ref counting only IDENTS,
	  ref count all nodes instead (updated __IDL_tree_free, added
	  IDL_tree_free_real).  Update remove_list_node to reflect this
	  change.

	* util.h: Remove __IDL_tree_free.

	* util.c (__IDL_tree_free): Ref count IDLN_IDENTS.

Tue Aug 25 01:46:10 1998  Tom Tromey  <tromey@cygnus.com>

	* util.c (IDL_strcase_equal): Use g_strcasecmp.
	(IDL_strcase_cmp): Likewise.

1998-08-24  Andrew Veliath  <andrewtv@usa.net>

	* Save inhibited nodes and free upon IDL_ns_free so that the full
	trees are available to traverse from the namespace.
	 
	* 'nostubs' changed to 'inhibit'

1998-08-17  Andrew Veliath  <andrewtv@usa.net>

	* Update version to 0.3

	* Create an IDLF_COMBINE_REOPENED_MODULES to have libIDL combine
	  all the module declarations into one tree, instead of separate
	  trees with the same ident node.

	* Add __declspec support.  First one implemented is for
	  interfaces, so that __declspec (nostubs) interface foo { ... };
	  won't generate tree node information.  Had to revamp grammar
	  slightly to get a single lookahead.

	* Change IDL_long_t to IDL_longlong_t (+ unsigned version).

1998-08-10  Andrew Veliath  <andrewtv@usa.net>

	* parser.y: Catch the interface Object construct, which isn't
	  legal, but is in some pseudo-IDL files.

	* lexer.l: Bring back Object token recognition.

	* ns.c (IDL_ns_ident_to_qstring): If given and IDLN_IDENT,
	  quietly call IDL_IDENT_TO_NS.

	* util.[ch]: Change g_strcase_hash to IDL_strcase_hash (make
	  public).  Add IDL_strcase_equal, IDL_strcase_cmp,
	  load_forward_dcls, resolve_forward_dcls,